--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
+    "@pedroslopez/moduleraid": "^5.0.2",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.12.5"
+    "whatsapp-web.js": "^1.14.0"
   }
 }
